--- a/source/sass/blocks/comment.scss
+++ b/source/sass/blocks/comment.scss
@@ -1,9 +1,9 @@
-.owner-contacts {
-  margin-bottom: 27px;
+.comment {
+  margin-bottom: 29px;
 }
 
 @media (min-width: $tablet-width) {
-  .owner-contacts {
+  .comment {
     margin-bottom: 65px;
   }
 }
