--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -8,3 +8,15 @@ body {
 a {
   text-decoration: none;
 }
+
+// * {
+//   background: #000 !important;
+//   color: #0f0 !important;
+//   outline: solid #f00 1px !important;
+// }
+
+// body, html {
+//   height: 100%;
+//   width: 100%;
+//   margin: 0;
+// }
