--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,3 +28,4 @@
 @import "blocks/cat-data.scss";
 @import "blocks/owner-contacts.scss";
 @import "blocks/container.scss";
+@import "blocks/comment.scss";
