--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,7 +11,9 @@ $grey: #666666;
 $grey-black: #222222;
 $input-grey: #e7e7e7;
 $border-grey: #ebebeb;
+$border-radio: #ededed;
 $extra-border-grey: #cdcdcd;
+$border-hover: #bababa;
 $invalid: #ff8282;
 $tablet-width: 768px;
 $desktop-width: 1440px;
