--- a/source/sass/blocks/bonus.scss
+++ b/source/sass/blocks/bonus.scss
@@ -1,38 +1,40 @@
 .bonus {
   margin-top: 39px;
   margin-right: 20px;
-  margin-bottom: 35px;
   margin-left: 20px;
+  padding-bottom: 35px;
   min-height: 289px;
-  background-color: $light-green;
-  background-image: url("../../img/gift-photo-mobile@1x.jpg");
-  background-position: center;
+  background-image: url("../img/gift-photo-mobile@1x.jpg"),
+                    linear-gradient(to bottom, $light-green 85%, transparent 85%);
+  background-position: top center;
   background-repeat: no-repeat;
 }
 
 @media (min-width: $tablet-width) {
   .bonus {
+    width: 708px;
     margin-top: 69px;
-    margin-right: 30px;
-    margin-bottom: 76px;
-    margin-left: 30px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-bottom: 76px;
     min-height: 200px;
-    background-image: url("../../img/gift-photo-tablet@1x.jpg");
+    background-color: $light-green;
+    background-image: url("../img/gift-photo-tablet@1x.jpg");
   }
 }
 
 @media (min-width: $desktop-width) {
   .bonus {
-    display: inline-block;
-    margin: 0;
-    min-height: 289px;
-    background-image: url("../../img/gift-photo-desktop@1x.jpg");
     width: 245px;
+    margin: 0;
+    padding-bottom: 0;
+    min-height: 289px;
+    background-image: url("../img/gift-photo-desktop@1x.jpg");
   }
 }
 
 .bonus__condition {
-  padding-top: 190px;
+  padding-top: 186px;
   margin-right: auto;
   margin-left: auto;
   width: 165px;
@@ -48,9 +50,9 @@
     content: "";
     width: 56px;
     height: 61px;
-    margin-top: -123px;
-    margin-left: 18px;
-    background-image: url("../../img/icon-gift.svg");
+    margin-top: -122px;
+    margin-left: 22px;
+    background-image: url("../img/icon-gift.svg");
     fill: $white;
     background-repeat: no-repeat;
     background-position: center;
