--- a/source/sass/blocks/extra-field-group.scss
+++ b/source/sass/blocks/extra-field-group.scss
@@ -1,15 +1,13 @@
 .extra-field-group {
   margin: 0;
   padding: 0;
-  border-top: 3px solid $light-green;
-  border-right: none;
-  border-bottom: none;
-  border-left: none;
+  border: none;
 }
 
 .extra-field-group__title {
-  margin-top: 31px;
-  margin-bottom: 30px;
+  display: inline-block;
+  position: relative;
+  margin-bottom: 39px;
   padding-right: 20px;
   padding-left: 20px;
   font-family: $font-oswald;
@@ -17,55 +15,96 @@
   font-size: 24px;
   font-weight: 400;
   line-height: 26px;
+  background-color: $white;
+
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 63%;
+    left: auto;
+    width: calc(100vw - 20px);
+    height: 2px;
+    background-color: $light-green;
+    z-index: -1;
+  }
 }
 
 @media (min-width: $tablet-width) {
   .extra-field-group__title {
-    margin-top: 69px;
     margin-left: 30px;
-    margin-bottom: 53px;
-    padding-right: 44px;
-    padding-left: 39px;
+    margin-bottom: 62px;
+    padding-right: 41px;
+    padding-left: 40px;
     font-size: 36px;
     line-height: 36px;
+
+    &::after {
+      width: calc(100vw - 70px);
+    }
+
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 63%;
+      left: auto;
+      right: 20px;
+      width: 100vw;
+      height: 2px;
+      background-color: $light-green;
+      z-index: -1;
+    }
   }
 }
 
 @media (min-width: $desktop-width) {
   .extra-field-group__title {
-    margin-top: 72px;
     margin-left: 70px;
+
+    &::after {
+      width: calc(100vw - 105px);
+    }
   }
 }
 
 @media (min-width: $tablet-width) {
   .extra-field-group__wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-content: space-between;
-    min-height: 112px;
-    padding-right: 70px;
-    padding-left: 70px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 100px;
+    row-gap: 42px;
+    margin-right: 40px;
+    margin-left: 40px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .extra-field-group__wrapper {
-    display: flex;
-    flex-wrap: nowrap;
-    min-height: 40px;
-    justify-content: space-between;
-    padding-right: 110px;
-    padding-left: 110px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 80px;
+    margin: 0;
+  }
+}
+
+.extra-field-group__checkgroup {
+  margin: 0;
+  margin-bottom: 25px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .extra-field-group__checkgroup {
+    margin: 0;
   }
 }
 
 .extra-field-group__label {
-  display: block;
-  margin-bottom: 13px;
-  padding-right: 20px;
-  padding-left: 20px;
+  display: flex;
+  padding-left: 46px;
   font-family: $font-oswald;
   color: $black;
   font-size: 16px;
@@ -73,33 +112,53 @@
   line-height: 18px;
   text-transform: uppercase;
 
-  &--last-input {
-    margin-bottom: 0;
+  &::before {
+    content: "";
+    display: block;
+    position: absolute;
+    margin-top: -6px;
+    margin-left: -47px;
+    width: 30px;
+    height: 30px;
+    border: 1px solid $extra-border-grey;
   }
+
+  &:hover::before {
+    border: 1px solid $border-hover;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
+.extra-field-group__checkbox:checked + .extra-field-group__label::after {
+  content: "";
+  display: block;
+  position: absolute;
+  margin-left: -40px;
+  width: 22px;
+  height: 17px;
+  background-image: url('../img/icon-tick.svg');
 }
 
 @media (min-width: $tablet-width) {
   .extra-field-group__label {
-    width: 45%;
-    margin: 0;
-    padding: 0;
+    padding-left: 59px;
     font-size: 20px;
     line-height: 30px;
-  }
-}
 
-@media (min-width: $desktop-width) {
-  .extra-field-group__label {
-    width: 25%;
+    &::before {
+      margin-left: -59px;
+      width: 40px;
+      height: 40px;
+    }
   }
-}
-
-.extra-field-group__checkbox {
-  margin-right: 16px;
 }
 
 @media (min-width: $tablet-width) {
-  .extra-field-group__checkbox {
-    margin-right: 19px;
+  .extra-field-group__checkbox:checked + .extra-field-group__label::after {
+    margin-top: 6px;
+    margin-left: -48px;
   }
 }
