--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -48,11 +48,12 @@
 }
 
 .main-nav__button-menu {
+  display: none;
   width: 18px;
   height: 18px;
   margin-left: auto;
   padding: 0;
-  background-image: url("../../img/icon-close.svg");
+  background-image: url("../img/icon-close.svg");
   background-color: transparent;
   border: none;
   cursor: pointer;
