--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -14,6 +14,8 @@ $border-grey: #ebebeb;
 $border-radio: #ededed;
 $extra-border-grey: #cdcdcd;
 $border-hover: #bababa;
+$example1: #efefef;
+$example2: #eaeaea;
 $invalid: #ff8282;
 $tablet-width: 768px;
 $desktop-width: 1440px;
