--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -2,7 +2,7 @@
   .main-nav {
     display: flex;
     align-items: center;
-    padding-top: 24px;
+    padding-top: 34px;
     padding-right: 30px;
     min-height: 52px;
   }
@@ -31,7 +31,7 @@
 
 @media (min-width: $desktop-width) {
   .main-nav__wrapper {
-    padding-top: 70px;
+    padding-top: 65px;
   }
 }
 
@@ -83,6 +83,7 @@
 @media (min-width: $desktop-width) {
   .main-nav__list {
     width: 50%;
-    padding-top: 71px;
+    padding-top: 65px;
+    padding-right: 110px;
   }
 }
