--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -102,13 +102,14 @@
   .programs__title {
     width: 250px;
     margin: 0;
-    margin-top: 25px;
+    margin-top: 28px;
     font-size: 36px;
     line-height: 36px;
 
     &::before {
       width: 200px;
       height: 200px;
+      margin-top: 14px;
       margin-left: 395px;
     }
   }
@@ -119,7 +120,7 @@
     width: 140px;
     height: 192px;
     margin-left: 259px;
-    margin-top: 0;
+    margin-top: 3px;
   }
 }
 
@@ -128,7 +129,7 @@
     width: 268px;
     height: 113px;
     margin-left: 153px;
-    margin-top: 44px;
+    margin-top: 56px;
   }
 }
 
@@ -181,6 +182,10 @@
     border-bottom: none;
     font-size: 16px;
     line-height: 24px;
+
+    &--width {
+      width: 340px;
+    }
   }
 }
 
