--- a/source/sass/blocks/bonus.scss
+++ b/source/sass/blocks/bonus.scss
@@ -16,10 +16,10 @@
     margin-top: 69px;
     margin-right: auto;
     margin-left: auto;
-    padding-bottom: 76px;
+    padding-bottom: 75px;
     min-height: 200px;
-    background-color: $light-green;
-    background-image: url("../img/gift-photo-tablet@1x.jpg");
+    background-image: url("../img/gift-photo-tablet@1x.jpg"),
+                      linear-gradient(to bottom, $light-green 70%, transparent 70%);
   }
 }
 
@@ -29,6 +29,7 @@
     margin: 0;
     padding-bottom: 0;
     min-height: 289px;
+    background-color: $light-green;
     background-image: url("../img/gift-photo-desktop@1x.jpg");
   }
 }
@@ -62,12 +63,13 @@
 
 @media (min-width: $tablet-width) {
   .bonus__condition {
-    padding-top: 75px;
-    margin-right: 125px;
+    padding-top: 70px;
+    margin-right: 120px;
+    text-align: left;
 
     &::before {
-      margin-top: 0;
-      margin-left: -360px;
+      margin-top: -7px;
+      margin-left: -333px;
     }
   }
 }
@@ -75,12 +77,13 @@
 
 @media (min-width: $desktop-width) {
   .bonus__condition {
-    padding-top: 190px;
+    padding-top: 170px;
     margin-right: auto;
     margin-left: auto;
+    text-align: center;
 
     &::before {
-      margin-top: -117px;
+      margin-top: -122px;
       margin-left: 23px;
     }
   }
