--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -172,7 +172,7 @@
 .example__term {
   padding-top: 13px;
   padding-right: 20px;
-  padding-bottom: 21px;
+  padding-bottom: 18px;
   padding-left: 20px;
   font-family: $font-oswald;
   color: $black;
@@ -278,6 +278,12 @@
   .example__photo-wrapper {
     position: relative;
     width: 630px;
+    height: 518px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .example__photo-wrapper {
     height: 450px;
   }
 }
@@ -321,7 +327,7 @@
   align-items: center;
   width: 200px;
   min-height: 20px;
-  margin-top: 35px;
+  margin-top: 31px;
   margin-right: auto;
   margin-left: auto;
 }
