--- a/source/sass/blocks/order-form.scss
+++ b/source/sass/blocks/order-form.scss
@@ -9,8 +9,8 @@
 @media (min-width: $tablet-width) {
   .order-form {
     width: 768px;
-    padding-top: 53px;
-    padding-bottom: 72px;
+    padding-top: 56px;
+    padding-bottom: 67px;
   }
 }
 
@@ -18,7 +18,7 @@
   .order-form {
     width: 1440px;
     padding-top: 56px;
-    padding-bottom: 82px;
+    padding-bottom: 80px;
   }
 }
 
@@ -65,10 +65,12 @@
 @media (min-width: $tablet-width) {
   .order-form__submit {
     display: inline-block;
-    margin-top: 59px;
+    width: 282px;
+    margin-top: 60px;
     margin-right: 61px;
     margin-left: 71px;
     font-size: 20px;
+    line-height: 52px;
   }
 }
 
@@ -95,9 +97,9 @@
 @media (min-width: $tablet-width) {
   .order-form__note {
     display: inline-block;
-    margin-top: 59px;
+    margin-top: 60px;
     font-size: 16px;
-    line-height: 40px;
+    line-height: 52px;
     text-align: left;
   }
 }
