--- a/source/sass/blocks/product-preview.scss
+++ b/source/sass/blocks/product-preview.scss
@@ -117,16 +117,17 @@
   }
 }
 
-.product-preview__food-pic {
+.product-preview__food-pic img {
   display: block;
   margin-right: auto;
   margin-left: auto;
 }
 
 @media (min-width: $desktop-width) {
-  .product-preview__food-pic {
+  .product-preview__food-pic img {
     position: absolute;
-    left: 650px;
+    top: -80px;
+    left: 450px;
   }
 }
 
