--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,7 @@
 @import "../../node_modules/normalize-scss/sass/normalize/import-now";
 @import "variables.scss";
 @import "global.scss";
+@import "blocks/page-main.scss";
 @import "blocks/visually-hidden.scss";
 @import "blocks/product-preview.scss";
 @import "blocks/programs.scss";
