--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -30,3 +30,4 @@
 @import "blocks/owner-contacts.scss";
 @import "blocks/container.scss";
 @import "blocks/comment.scss";
+@import "blocks/js-function.scss";
